fix long game names not truncating

--- a/options/mixer-styles.css
+++ b/options/mixer-styles.css
@@ -179,4 +179,5 @@
     line-height: 1.1em;
     margin-top: 0.15em;
     overflow: hidden;
+    width: 100%;
 }
